# LaTeX2Anki

./: .gitignore  README.md  example.tex  latex2anki.ini  latex2anki.py  latex2anki.sty  pyproject.toml
example/: example.apkg  example.csv  example.html
latex2anki/: cli.py  latex2anki.jinja2s
